Update ArrayCompiler.java